Attempting to get center alignment correct.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,33 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css" />
     <title>Jacob M.</title>
 </head>
-<body>
-
+<body style="background-color: #0000ff;">
+    <div id="IndexHello">
+        <h1>Hello!</h1>
+        <h2>I'm Jacob McCormack</h2>
+    </div>
+    <div id="IndexDirectories">
+        <div class="directory">
+            <img src="Resume.jpg" alt="Resume placeholder image." class="directory-img">
+            <div class="directory-text">
+                Click Here to See My <div class="indexHead">Resume</div>
+            </div>
+        </div>
+        <div class="directory">
+            <img src="Software Portfolio.jpg" alt="Resume placeholder image." class="directory-img">
+            <div class="directory-text">
+                Or Here to See My <div class="indexHead">Software Portfolio</div>
+            </div>
+        </div>
+        <div class="directory">
+            <img src="Photography Portfolio.jpg" alt="Resume placeholder image." class="directory-img">
+            <div class="directory-text">
+                Or Here to See My <div class="indexHead">Photography Portfolio</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
