--- a/index.html
+++ b/index.html
@@ -6,31 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Jacob M.</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body style="background-color: #0000ff;">
     <div id="IndexHello">
         <h1>Hello!</h1>
         <h2>I'm Jacob McCormack</h2>
     </div>
-    <div id="IndexDirectories">
-        <div class="directory">
-            <img src="Resume.jpg" alt="Resume placeholder image." class="directory-img">
+    <p class="note">Click any of the following images to navigate.</p>
+    <nav id="IndexDirectories" aria-label="Navigation Menu">
+        <button class="directory" onclick="open_resume()">
+            <img src="Resume.jpg" alt="Resume placeholder image." id="img0" class="directory-img">
             <div class="directory-text">
-                Click Here to See My <div class="indexHead">Resume</div>
+                Resume
             </div>
-        </div>
-        <div class="directory">
-            <img src="Software Portfolio.jpg" alt="Resume placeholder image." class="directory-img">
+        </button>
+        <button class="directory" onclick="location.href='index.html'">
+            <img src="Software Portfolio.jpg" alt="Resume placeholder image." id="img1" class="directory-img">
             <div class="directory-text">
-                Or Here to See My <div class="indexHead">Software Portfolio</div>
+                Software Portfolio
             </div>
-        </div>
-        <div class="directory">
-            <img src="Photography Portfolio.jpg" alt="Resume placeholder image." class="directory-img">
+        </button>
+        <button class="directory" onclick="location.href='index.html'">  
+            <img src="Photography Portfolio.jpg" alt="Resume placeholder image." id="img2" class="directory-img">
             <div class="directory-text">
-                Or Here to See My <div class="indexHead">Photography Portfolio</div>
+                Photography Portfolio
             </div>
-        </div>
-    </div>
+        </button>
+    </nav>
 </body>
 </html>
